--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialec
 #Hibernate ddl auto (create, create-drip, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
